--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,9 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Upload File</h1>
+    @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <div>
+            @Html.TextBox("file", "", new { type = "file" }) <br />
+            <input type="submit" class="btn btn-primary btn-lg" value="Upload" />
+            @ViewBag.Message
+        </div>
+    }
+    
 </div>
 
 <div class="row">
