Encryption and Decryption Process

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Sender Information", "Index", "Sender")</li>
+                    <li>@Html.ActionLink("Receiver Information", "Index", "Receiver")</li>
+                    <li>@Html.ActionLink("Send Data", "Index", "SRAllocation")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
