--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Sender Information", "Index", "Sender")</li>
                     <li>@Html.ActionLink("Receiver Information", "Index", "Receiver")</li>
                     <li>@Html.ActionLink("Send Data", "Index", "SRAllocation")</li>
+                    <li>@Html.ActionLink("Download Data", "Index", "DownloadData")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
