--- a/Views/Receiver/Delete.cshtml
+++ b/Views/Receiver/Delete.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Receiver's Information</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>tbl_receiverinfo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_name)
+            @Html.DisplayName("Name")
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
