--- a/Views/Receiver/Details.cshtml
+++ b/Views/Receiver/Details.cshtml
@@ -7,11 +7,10 @@
 <h2>Details</h2>
 
 <div>
-    <h4>tbl_receiverinfo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_name)
+            @Html.DisplayName("Name")
         </dt>
 
         <dd>
@@ -19,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
