--- a/Views/SRAllocation/Create.cshtml
+++ b/Views/SRAllocation/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Share Data</h2>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
@@ -74,26 +74,25 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>tbl_SR_allocation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         
-        @Html.LabelFor(model => model.sender_id, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Select Sender", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <select id="sender_id" name="sender_id" class="form-control"></select>
         </div>
     </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.receiver_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Select Receiver", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <select id="receiver_id" name="receiver_id" class="form-control"></select>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tbldatakey_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Select File", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <select id="tbldatakey_id" name="tbldatakey_id" class="form-control"></select>
             </div>
