--- a/Views/SRAllocation/Delete.cshtml
+++ b/Views/SRAllocation/Delete.cshtml
@@ -8,11 +8,10 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>tbl_SR_allocation</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.sender_id)
+            @Html.DisplayName("Sender")
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_id)
+            @Html.DisplayName("Receiver")
         </dt>
 
         <dd>
@@ -28,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.tbldatakey_id)
+            @Html.DisplayName("File")
         </dt>
 
         <dd>
@@ -36,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.receiver_key)
+            @Html.DisplayName("Receiver's key")
         </dt>
 
         <dd>
