--- a/Views/SRAllocation/Edit.cshtml
+++ b/Views/SRAllocation/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.HiddenFor(model => model.sr_id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.sender_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Sender", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.sender_id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.sender_id, "", new { @class = "text-danger" })
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.receiver_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Receiver", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.receiver_id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.receiver_id, "", new { @class = "text-danger" })
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tbldatakey_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("File", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.tbldatakey_id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.tbldatakey_id, "", new { @class = "text-danger" })
