--- a/Views/Sender/Delete.cshtml
+++ b/Views/Sender/Delete.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Sender's Information</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>tbl_senderinfo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.sender_fname)
+            @Html.DisplayName("First Name")
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_lname)
+            @Html.DisplayName("Last Name")
         </dt>
 
         <dd>
@@ -28,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
@@ -36,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.secret_word)
+            @Html.DisplayName("Secret Word")
         </dt>
 
         <dd>
@@ -44,7 +43,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_attribute)
+            @Html.DisplayName("Attribute")
         </dt>
 
         <dd>
