--- a/Views/Sender/Details.cshtml
+++ b/Views/Sender/Details.cshtml
@@ -10,7 +10,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.sender_fname)
+            @Html.DisplayName("First Name")
         </dt>
 
         <dd>
@@ -18,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_lname)
+            @Html.DisplayName("Last Name")
         </dt>
 
         <dd>
@@ -26,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
@@ -34,7 +34,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.secret_word)
+            @Html.DisplayName("Secret Word")
         </dt>
 
         <dd>
@@ -42,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.sender_attribute)
+            @Html.DisplayName("Attribute")
         </dt>
 
         <dd>
