--- a/Views/Sender/Index.cshtml
+++ b/Views/Sender/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>List of Receivers</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -12,19 +12,19 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.sender_fname)
+            @Html.DisplayName("First Name")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.sender_lname)
+            @Html.DisplayName("Last Name")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.sender_email)
+            @Html.DisplayName("Email")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.secret_word)
+            @Html.DisplayName("Secret Word")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.sender_attribute)
+            @Html.DisplayName("Attribute")
         </th>
         <th></th>
     </tr>
