--- a/Views/Sender/UploadFile.cshtml
+++ b/Views/Sender/UploadFile.cshtml
@@ -2,33 +2,41 @@
 @{
     ViewBag.Title = "UploadFile";
 }
-
-<h2>UploadFile</h2>
+<head>
+    <style>
+        .myclass {
+            border: aliceblue;
+        }
+    </style>
+</head>
+<h2>Upload File</h2>
 @using (Html.BeginForm("UploadFile", "Sender", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-<div>
+<div style=" display: grid;">
     <hr />
     <div class="form-group">
-        @Html.LabelFor(model => model.sender_fname, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Sender's First Name", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DisplayFor(model => model.sender_fname, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
+    <br/>
     <div class="form-group">
         @Html.Label("Upload File", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBox("file", "", new { htmlAttributes = new { @class = "form-control" }, type = "file" })
+            @Html.TextBox("file", "", new { htmlAttributes = new { @class = "form-control myclass" }, type = "file" })
             @*@Html.ValidationMessageFor("Upload File","", new { @class = "text-danger" })*@
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary btn-lg" value="UploadFile" />
+            <input type="submit" class="btn btn-primary btn-sm" value="UploadFile" />
         </div>
     </div>
 </div>
 }
+<br/>
     <p>
         @Html.ActionLink("Back to List", "Index")
     </p>
