--- a/Views/DownloadData/Index.cshtml
+++ b/Views/DownloadData/Index.cshtml
@@ -35,7 +35,7 @@
                 if (Model.listdownloadDataModel[i].slname == null) { Model.listdownloadDataModel[i].slname = "null"; }
                 if (Model.listdownloadDataModel[i].semail == null) { Model.listdownloadDataModel[i].semail = "null"; }
             }
-            <input type="button" value="Download" class="btn btn-primary" onclick="getFile(@Model.listdownloadDataModel[i].datakey_id,@Model.listdownloadDataModel[i].sr_id,@Model.listdownloadDataModel[i].rkey,@Model.listdownloadDataModel[i].sfname,@Model.listdownloadDataModel[i].slname,@Model.listdownloadDataModel[i].semail);" />
+            <input type="button" value="Download" class="btn btn-primary" onclick="getFile(this,@Model.listdownloadDataModel[i].datakey_id,@Model.listdownloadDataModel[i].sr_id,@Model.listdownloadDataModel[i].rkey,@Model.listdownloadDataModel[i].sfname,@Model.listdownloadDataModel[i].slname,@Model.listdownloadDataModel[i].semail);" />
 
         </div>
     }
@@ -46,16 +46,33 @@
 <head>
     
     <script type="text/javascript">
-        function getFile(datakeyid, sr_id, rkey, sfname, slname, semail) {
+        function getFile(curelem, datakeyid, sr_id, rkey, sfname, slname, semail) {
             var url = "/DownloadData/Index";
-
+            var r="",sf="",sl="",se="";
+            for (i = 0; i < curelem.parentElement.children.length; i++) {
+                if (curelem.parentElement.children[i].nodeName == "INPUT") {
+                    if (curelem.parentElement.children[i].name.includes("rkey")) {
+                        r = curelem.parentElement.children[i].value;
+                    }
+                    if (curelem.parentElement.children[i].name.includes("sfname")) {
+                        sf = curelem.parentElement.children[i].value;
+                    }
+                    if (curelem.parentElement.children[i].name.includes("slname")) {
+                        sl = curelem.parentElement.children[i].value;
+                    }
+                    if (curelem.parentElement.children[i].name.includes("semail")) {
+                        se = curelem.parentElement.children[i].value;
+                    }
+                }
+            }
             $.ajax({
                 type: 'POST',
                 url: url,
                 dataType: "json",
                 traditional: true,
-                contentType: "application/json",
-                data: JSON.stringify({ 'datakey_id': datakeyid, 'srid': sr_id, 'r_key': rkey, 's_name': sfname, 's_lname': slname, 's_email': semail }),
+                responseType: 'blob',
+                contentType: "application/download",
+                data: JSON.stringify({ 'datakey_id': datakeyid, 'srid': sr_id, 'r_key': '67604', 's_name': 'shraddha', 's_lname': 'mhatre', 's_email': 'shraddha@gmail.com' }),
                 success: function (data) {
                     document.getElementById('txtResponse').innerHTML = JSON.stringify(data.Data);
                 },
