--- a/Views/Sender/Index.cshtml
+++ b/Views/Sender/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>List of Receivers</h2>
+<h2>List of Senders</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
