--- a/Views/SRAllocation/Index.cshtml
+++ b/Views/SRAllocation/Index.cshtml
@@ -23,21 +23,22 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.senderemail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.receiveremail)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.datafilename)
-        </td>
-        <td>
-            @Html.ActionLink("Delete", "Delete", new { id=item.srid })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.senderemail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.receiveremail)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.datafilename)
+            </td>
+            <td>
+                @Html.ActionLink("Delete", "Delete", new { id = item.srid })
+            </td>
+        </tr>
+    }
 
 </table>
