--- a/Views/Sender/Index.cshtml
+++ b/Views/Sender/Index.cshtml
@@ -29,30 +29,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.sender_fname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.sender_lname)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.sender_email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.secret_word)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.sender_attribute)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.sender_id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.sender_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.sender_id }) |
-            @Html.ActionLink("UploadFile", "UploadFile", new { id = item.sender_id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.sender_fname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.sender_lname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.sender_email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.secret_word)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.sender_attribute)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.sender_id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.sender_id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.sender_id }) |
+                @Html.ActionLink("UploadFile", "UploadFile", new { id = item.sender_id })
+            </td>
+        </tr>
+    }
 
 </table>
