improvement in code

--- a/Views/Sender/Delete.cshtml
+++ b/Views/Sender/Delete.cshtml
@@ -42,11 +42,11 @@
             @Html.DisplayFor(model => model.secret_word)
         </dd>
 
-        <dt>
+        <dt style="display:none;">
             @Html.DisplayName("Attribute")
         </dt>
 
-        <dd>
+        <dd style="display:none;">
             @Html.DisplayFor(model => model.sender_attribute)
         </dd>
 
