--- a/Views/Sender/Details.cshtml
+++ b/Views/Sender/Details.cshtml
@@ -41,11 +41,11 @@
             @Html.DisplayFor(model => model.secret_word)
         </dd>
 
-        <dt>
+        <dt style="display:none;">
             @Html.DisplayName("Attribute")
         </dt>
 
-        <dd>
+        <dd style="display:none;">
             @Html.DisplayFor(model => model.sender_attribute)
         </dd>
 
