--- a/Views/Sender/Edit.cshtml
+++ b/Views/Sender/Edit.cshtml
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="display:none;">
             @Html.Label("Attribute", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.sender_attribute, new { htmlAttributes = new { @class = "form-control" } })
